classic ML approach

--- a/defects_AKAZE_SVM.ipynb
+++ b/defects_AKAZE_SVM.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "a944f699-f252-4f72-9911-50481b0470b5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# adaptation of this code https://github.com/docongminh/Classification-SIFT-SVM\n",
-    "\n",
+    "# to use AKAZE instead of SIFT\n",
     "import cv2\n",
     "import os\n",
     "import glob\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "06f5abfc-4324-4ea3-99d9-08131eda97b7",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
     "    return data_train, data_label, label2id\n",
     "\n",
     "# TEST\n",
-    "#data_train, data_label, label2id = label_image('casting_512x512/casting_512x512/')\n",
+    "#data_train, data_label, label2id = label_image('casting_512x512/')\n",
     "#print(data_train[0])\n",
     "#cv2.imwrite('test.jpg', data_train[0])\n",
     "#print(data_label[0])\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "67ad443f-0af9-4206-a3a7-b073cc9c1f67",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "b3a9407c-26e3-46de-bbfe-54f4fcb5d90e",
    "metadata": {},
    "outputs": [
@@ -122,31 +122,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "casting_512x512/casting_512x512\n",
+      "casting_512x512\n",
       "path ok\n",
       "descriptors ok\n",
       "bow ok\n",
       "features ok\n",
       "start fit\n",
       "fit ok\n",
-      "best score:  0.998076923076923\n",
-      "best_params:  {'C': 20}\n"
+      "best score:  0.9988235294117647\n",
+      "best_params:  {'C': 25}\n"
      ]
     }
    ],
    "source": [
     "# read files, compute features, fit SVM model with Cross Val\n",
     "\n",
-    "path = \"casting_512x512/casting_512x512\"\n",
+    "path = \"casting_512x512\"\n",
     "print(path)\n",
     "data_train, label, label2id = label_image(path)\n",
     "print(\"path ok\")\n",
     "\n",
-    "image_desctiptors = extract_akaze_features(data_train)\n",
+    "image_descriptors = extract_akaze_features(data_train)\n",
     "print(\"descriptors ok\")\n",
     "\n",
     "all_descriptors = []\n",
-    "for descriptor in image_desctiptors:\n",
+    "for descriptor in image_descriptors:\n",
     "    if descriptor is not None:\n",
     "        for des in descriptor:\n",
     "            all_descriptors.append(des)\n",
@@ -155,7 +155,7 @@
     "BoW = kmean_bow(all_descriptors, num_cluster)\n",
     "print(\"bow ok\")\n",
     "\n",
-    "X_features = create_feature_bow(image_desctiptors, BoW, num_cluster)\n",
+    "X_features = create_feature_bow(image_descriptors, BoW, num_cluster)\n",
     "print(\"features ok\")\n",
     "\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X_features, label, test_size = 0.2, random_state = 1)\n",
@@ -164,7 +164,7 @@
     "grid_model = GridSearchCV(\n",
     "    estimator = model_svm,\n",
     "    param_grid  = parameters,\n",
-    "    scoring = f1,\n",
+    "    scoring = \"f1\",\n",
     "    cv = 10)\n",
     "print(\"start fit\")\n",
     "grid_model.fit(X_train, Y_train)\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4d9a245-64d8-4ea0-b756-16b8901fe752",
+   "id": "2682a32e-82a8-4595-9f9b-2c9c365196a9",
    "metadata": {},
    "outputs": [],
    "source": []
