--- a/01_defects_transfer.ipynb
+++ b/01_defects_transfer.ipynb
@@ -12,7 +12,7 @@
     "# use raw classifications for a proxy metric to ok/defect\n",
     "# code adapted from:\n",
     "# Keras tutorial https://keras.io/guides/transfer_learning/\n",
-    "# Kaggle tutorial https://www.kaggle.com/code/digantdixit/transfer-learning-cnn-for-beginners\n"
+    "# Kaggle tutorial https://www.kaggle.com/code/digantdixit/transfer-learning-cnn-for-beginners"
    ]
   },
   {
@@ -26,8 +26,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import keras, os\n",
-    "from keras.layers import Conv2D, MaxPool2D,Dropout,Flatten,Dense\n",
-    "from keras.preprocessing import image \n",
+    "from keras.layers import Conv2D, MaxPool2D, Dropout, Flatten, Dense\n",
+    "from keras.preprocessing import image\n",
     "from keras.models import Sequential"
    ]
   },
@@ -47,9 +47,21 @@
     }
    ],
    "source": [
-    "train_data_gen = image.ImageDataGenerator(rescale= 1./255, validation_split=0.2)\n",
-    "train = train_data_gen.flow_from_directory(directory=\"casting_512x512/\" , target_size=(256,256) , batch_size=32, class_mode = 'binary', subset='training')\n",
-    "test = train_data_gen.flow_from_directory(directory=\"casting_512x512/\" , target_size=(256,256) , batch_size=32, class_mode = 'binary', subset='validation')"
+    "train_data_gen = image.ImageDataGenerator(rescale=1.0 / 255, validation_split=0.2)\n",
+    "train = train_data_gen.flow_from_directory(\n",
+    "    directory=\"casting_512x512/\",\n",
+    "    target_size=(256, 256),\n",
+    "    batch_size=32,\n",
+    "    class_mode=\"binary\",\n",
+    "    subset=\"training\",\n",
+    ")\n",
+    "test = train_data_gen.flow_from_directory(\n",
+    "    directory=\"casting_512x512/\",\n",
+    "    target_size=(256, 256),\n",
+    "    batch_size=32,\n",
+    "    class_mode=\"binary\",\n",
+    "    subset=\"validation\",\n",
+    ")"
    ]
   },
   {
@@ -80,7 +92,8 @@
    "outputs": [],
    "source": [
     "from tensorflow.keras.applications import Xception\n",
-    "xcept = Xception(input_shape = (256, 256, 3), include_top = False, weights = 'imagenet')"
+    "\n",
+    "xcept = Xception(input_shape=(256, 256, 3), include_top=False, weights=\"imagenet\")"
    ]
   },
   {
@@ -91,17 +104,17 @@
    "outputs": [],
    "source": [
     "### OTHER CODE, FROM KAGGLE\n",
-    "#for layer in xcept.layers:\n",
+    "# for layer in xcept.layers:\n",
     "#    layer.trainable = False\n",
-    "#model=keras.Sequential([\n",
+    "# model=keras.Sequential([\n",
     "#    xcept,\n",
     "#    keras.layers.Flatten(),\n",
     "#    keras.layers.Dense(units=256, activation=\"relu\"),\n",
     "#    keras.layers.Dropout(0.2),\n",
     "#    keras.layers.Dense(units=1, activation=\"sigmoid\"),\n",
-    "#])\n",
+    "# ])\n",
     "\n",
-    "#model.compile(optimizer=\"adam\",loss='binary_crossentropy',metrics=['accuracy'])"
+    "# model.compile(optimizer=\"adam\",loss='binary_crossentropy',metrics=['accuracy'])"
    ]
   },
   {
@@ -115,16 +128,18 @@
     "xcept.trainable = False\n",
     "inputs = keras.Input(shape=(256, 256, 3))\n",
     "# We make sure that the base_model is running in inference mode here,\n",
-    "# by passing `training=False`. \n",
+    "# by passing `training=False`.\n",
     "x = xcept(inputs, training=False)\n",
     "# Convert features of shape `base_model.output_shape[1:]` to vectors\n",
     "x = keras.layers.GlobalAveragePooling2D()(x)\n",
     "# A Dense classifier with a single unit (binary classification)\n",
     "outputs = keras.layers.Dense(1)(x)\n",
     "model = keras.Model(inputs, outputs)\n",
-    "model.compile(optimizer=keras.optimizers.Adam(),\n",
-    "              loss=keras.losses.BinaryCrossentropy(from_logits=True),\n",
-    "              metrics=['accuracy'])\n"
+    "model.compile(\n",
+    "    optimizer=keras.optimizers.Adam(),\n",
+    "    loss=keras.losses.BinaryCrossentropy(from_logits=True),\n",
+    "    metrics=[\"accuracy\"],\n",
+    ")"
    ]
   },
   {
@@ -207,7 +222,13 @@
     }
    ],
    "source": [
-    "model.fit(train,epochs=10,steps_per_epoch=7,validation_data=test,validation_steps=len(test))"
+    "model.fit(\n",
+    "    train,\n",
+    "    epochs=10,\n",
+    "    steps_per_epoch=7,\n",
+    "    validation_data=test,\n",
+    "    validation_steps=len(test),\n",
+    ")"
    ]
   },
   {
@@ -257,25 +278,25 @@
    ],
    "source": [
     "# plot loss\n",
-    "plt.subplots(figsize = (8, 4))\n",
-    "X = range(1, 1+len(model.history.epoch))\n",
+    "plt.subplots(figsize=(8, 4))\n",
+    "X = range(1, 1 + len(model.history.epoch))\n",
     "plt.plot(model.history.history[\"loss\"])\n",
     "plt.plot(model.history.history[\"val_loss\"])\n",
-    "plt.title(\"Loss\", fontsize = 20)\n",
+    "plt.title(\"Loss\", fontsize=20)\n",
     "plt.xlabel(\"Epochs\")\n",
     "plt.ylabel(\"Metrics\")\n",
-    "plt.legend(labels = ['train_loss', 'val_loss'])\n",
+    "plt.legend(labels=[\"train_loss\", \"val_loss\"])\n",
     "plt.show()\n",
     "\n",
     "# plot accuracy\n",
-    "plt.subplots(figsize = (8, 4))\n",
+    "plt.subplots(figsize=(8, 4))\n",
     "plt.plot(model.history.history[\"accuracy\"])\n",
     "plt.plot(model.history.history[\"val_accuracy\"])\n",
-    "plt.title(\"Accuracy\", fontsize = 20)\n",
+    "plt.title(\"Accuracy\", fontsize=20)\n",
     "plt.xlabel(\"Epochs\")\n",
     "plt.ylabel(\"Metrics\")\n",
-    "plt.ylim(0,1)\n",
-    "plt.legend(labels = ['train_accuracy', 'val_accuracy'])\n",
+    "plt.ylim(0, 1)\n",
+    "plt.legend(labels=[\"train_accuracy\", \"val_accuracy\"])\n",
     "plt.show()"
    ]
   },
@@ -300,10 +321,10 @@
     "from tensorflow.keras.applications.xception import preprocess_input, decode_predictions\n",
     "import numpy as np\n",
     "\n",
-    "model = Xception(input_shape = (299, 299, 3), weights='imagenet')\n",
+    "model = Xception(input_shape=(299, 299, 3), weights=\"imagenet\")\n",
     "\n",
-    "img_path = 'casting_512x512/ok_front/cast_ok_0_1018.jpeg'\n",
-    "#img_path = 'casting_512x512/def_front/cast_def_0_0.jpeg'\n",
+    "img_path = \"casting_512x512/ok_front/cast_ok_0_1018.jpeg\"\n",
+    "# img_path = 'casting_512x512/def_front/cast_def_0_0.jpeg'\n",
     "img = image.load_img(img_path, target_size=(299, 299))\n",
     "x = image.img_to_array(img)\n",
     "x = np.expand_dims(x, axis=0)\n",
@@ -312,7 +333,7 @@
     "preds = model.predict(x)\n",
     "# decode the results into a list of tuples (class, description, probability)\n",
     "# (one such list for each sample in the batch)\n",
-    "print('Predicted:', decode_predictions(preds, top=3)[0])"
+    "print(\"Predicted:\", decode_predictions(preds, top=3)[0])"
    ]
   },
   {
