--- a/02_defects_AKAZE_SVM.ipynb
+++ b/02_defects_AKAZE_SVM.ipynb
@@ -28,9 +28,11 @@
    "source": [
     "# reading of input pictures\n",
     "\n",
+    "\n",
     "def imread_img(path_image):\n",
     "\n",
     "    return cv2.imread(path_image)\n",
+    "\n",
     "\n",
     "def label_image(path_to_data):\n",
     "\n",
@@ -44,7 +46,7 @@
     "    data_label = []\n",
     "\n",
     "    for label in list_label:\n",
-    "        for img in glob.glob(path_to_data+\"/\" + label + '/*'):\n",
+    "        for img in glob.glob(path_to_data + \"/\" + label + \"/*\"):\n",
     "            image = imread_img(img)\n",
     "            label_image = label2id[label]\n",
     "\n",
@@ -53,15 +55,13 @@
     "\n",
     "    return data_train, data_label, label2id\n",
     "\n",
+    "\n",
     "# TEST\n",
-    "#data_train, data_label, label2id = label_image('casting_512x512/')\n",
-    "#print(data_train[0])\n",
-    "#cv2.imwrite('test.jpg', data_train[0])\n",
-    "#print(data_label[0])\n",
-    "#print(label2id)\n",
-    "\n",
-    "\n",
-    "\n"
+    "# data_train, data_label, label2id = label_image('casting_512x512/')\n",
+    "# print(data_train[0])\n",
+    "# cv2.imwrite('test.jpg', data_train[0])\n",
+    "# print(data_label[0])\n",
+    "# print(label2id)"
    ]
   },
   {
@@ -71,7 +71,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# AKAZE and Bag of words \n",
+    "# AKAZE and Bag of words\n",
+    "\n",
     "\n",
     "def extract_akaze_features(list_image):\n",
     "\n",
@@ -83,15 +84,17 @@
     "\n",
     "    return image_descriptors\n",
     "\n",
+    "\n",
     "def kmean_bow(all_descriptors, num_cluster):\n",
     "    bow_dict = []\n",
     "\n",
-    "    kmeans = KMeans(n_clusters = num_cluster)\n",
+    "    kmeans = KMeans(n_clusters=num_cluster)\n",
     "    kmeans.fit(all_descriptors)\n",
     "\n",
     "    bow_dict = kmeans.cluster_centers_\n",
     "\n",
     "    return bow_dict\n",
+    "\n",
     "\n",
     "def create_feature_bow(image_descriptors, BoW, num_cluster):\n",
     "\n",
@@ -103,13 +106,13 @@
     "        if image_descriptors[i] is not None:\n",
     "            distance = cdist(image_descriptors[i], BoW)\n",
     "\n",
-    "            argmin = np.argmin(distance, axis = 1)\n",
+    "            argmin = np.argmin(distance, axis=1)\n",
     "\n",
     "            for j in argmin:\n",
     "                features[j] += 1\n",
     "        X_features.append(features)\n",
     "\n",
-    "    return X_features\n"
+    "    return X_features"
    ]
   },
   {
@@ -158,14 +161,14 @@
     "X_features = create_feature_bow(image_descriptors, BoW, num_cluster)\n",
     "print(\"features ok\")\n",
     "\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X_features, label, test_size = 0.2, random_state = 1)\n",
-    "model_svm = sklearn.svm.SVC(C = 30, random_state = 0)\n",
-    "parameters = [{'C': [20, 25, 30, 35, 40, 45]}]\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(\n",
+    "    X_features, label, test_size=0.2, random_state=1\n",
+    ")\n",
+    "model_svm = sklearn.svm.SVC(C=30, random_state=0)\n",
+    "parameters = [{\"C\": [20, 25, 30, 35, 40, 45]}]\n",
     "grid_model = GridSearchCV(\n",
-    "    estimator = model_svm,\n",
-    "    param_grid  = parameters,\n",
-    "    scoring = \"f1\",\n",
-    "    cv = 10)\n",
+    "    estimator=model_svm, param_grid=parameters, scoring=\"f1\", cv=10\n",
+    ")\n",
     "print(\"start fit\")\n",
     "grid_model.fit(X_train, Y_train)\n",
     "print(\"fit ok\")\n",
