--- a/02_defects_AKAZE_SVM.ipynb
+++ b/02_defects_AKAZE_SVM.ipynb
@@ -1,14 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c23b2618",
+   "metadata": {},
+   "source": [
+    "This notebook uses a traditional CV approach to classify picture into defect or no-defect.\n",
+    "It is an adaptation of this code https://github.com/docongminh/Classification-SIFT-SVM\n",
+    ", but it uses AKAZE instead of SIFT for feature extraction from pictures."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "a944f699-f252-4f72-9911-50481b0470b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# adaptation of this code https://github.com/docongminh/Classification-SIFT-SVM\n",
-    "# to use AKAZE instead of SIFT\n",
+    "#\n",
     "import cv2\n",
     "import os\n",
     "import glob\n",
@@ -21,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "06f5abfc-4324-4ea3-99d9-08131eda97b7",
    "metadata": {},
    "outputs": [],
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "67ad443f-0af9-4206-a3a7-b073cc9c1f67",
    "metadata": {},
    "outputs": [],
@@ -117,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "b3a9407c-26e3-46de-bbfe-54f4fcb5d90e",
    "metadata": {},
    "outputs": [
@@ -132,8 +141,8 @@
       "features ok\n",
       "start fit\n",
       "fit ok\n",
-      "best score:  0.9988235294117647\n",
-      "best_params:  {'C': 25}\n"
+      "best score:  0.9976741041244084\n",
+      "best_params:  {'C': 20}\n"
      ]
     }
    ],
@@ -188,7 +197,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('221203_enseirb')",
    "language": "python",
    "name": "python3"
   },
@@ -202,7 +211,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f1bdddd1d8990c582a540f1829bbc6bdd94158ecb0a1111c2e392c9151ffaf16"
+   }
   }
  },
  "nbformat": 4,
