--- a/01_defects_transfer_working_example.ipynb
+++ b/01_defects_transfer_working_example.ipynb
@@ -339,6 +339,14 @@
       "1/1 [==============================] - 1s 938ms/step\n",
       "Predicted: [('n03843555', 'oil_filter', 0.31126547), ('n04553703', 'washbasin', 0.22433704), ('n04019541', 'puck', 0.09062061)]\n"
      ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mLe Kernel s’est bloqué lors de l’exécution du code dans la cellule active ou une cellule précédente. Veuillez vérifier le code dans la ou les cellules pour identifier une cause possible de l’échec. Cliquez <a href='https://aka.ms/vscodeJupyterKernelCrash'>ici</a> pour plus d’informations. Pour plus d’informations, consultez Jupyter <a href='command:jupyter.viewOutput'>log</a>."
+     ]
     }
    ],
    "source": [
