--- a/00_defects_transfer_exercise.ipynb
+++ b/00_defects_transfer_exercise.ipynb
@@ -103,7 +103,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot loss and  accuracy as a function of epochs"
+    "# plot loss and  accuracy as a function of epochs\n",
+    "# plot the result of some predictions. Plot some false positives."
    ]
   },
   {
