--- a/00_defects_transfer_exercise.ipynb
+++ b/00_defects_transfer_exercise.ipynb
@@ -38,8 +38,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load your train and test set by using keras.preprocessing.image.ImageDataGenerator\n",
-    "# think about rescaling and splitting"
+    "# Load your dataset from the directory `casting_512x512`\n",
+    "# by using keras.preprocessing.image.ImageDataGenerator\n",
+    "# check that you have 2 classes\n",
+    "# think about rescaling and train/test splitting\n",
+    "# plot a few pictures to see what you deal with"
    ]
   },
   {
@@ -92,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fit your model for a gew epochs using 'train' data and 'test' validation data\n",
+    "# Fit your model for a few epochs using 'train' data and 'test' validation data\n",
     "model.fit(...)"
    ]
   },
