--- a/00_defects_transfer_exercise.ipynb
+++ b/00_defects_transfer_exercise.ipynb
@@ -5,12 +5,19 @@
    "id": "82f7f052",
    "metadata": {},
    "source": [
-    "This notebook is an illustration of transfer learning. It uses:\n",
-    "- a pre-trained Model from Keras (Xception)\n",
-    "- a dataset of casting products, some of which have a defect\n",
-    "Then it adds a simple classification layer to the pre-trained model, and trains it with the pictures.\n",
+    "This notebook is a tempate to work on an illustration of transfer learning. \n",
+    "It should use:\n",
+    "- a pre-trained Model from Keras (Xception at first)\n",
+    "- a dataset of images of casting products (impellers for submersible pumps), \n",
+    "some of which have a defect (available in `casting_512x512.zip` \n",
+    "or on [Kaggle](https://www.kaggle.com/datasets/ravirajsinh45/real-life-industrial-dataset-of-casting-product))\n",
     "\n",
-    "The code is adapted from: \n",
+    "Add a simple classification layer to the pre-trained model, and train it with \n",
+    "the pictures.\n",
+    "When this works, try different tweaks such as different models, data augmentation, \n",
+    "etc. \n",
+    "\n",
+    "The code can be adapted from: \n",
     "- Keras tutorial https://keras.io/guides/transfer_learning/\n",
     "- Kaggle tutorial https://www.kaggle.com/code/digantdixit/transfer-learning-cnn-for-beginners"
    ]
