--- a/00_defects_transfer_exercise.ipynb
+++ b/00_defects_transfer_exercise.ipynb
@@ -144,8 +144,8 @@
     "|1..n|Xception,&puncsp;MobileNet,&puncsp;ResNet,&puncsp;...|y/n|5%&puncsp;10%&puncsp;50%&puncsp;80%&puncsp;of&puncsp;total|||||\n",
     "\n",
     "Other ideas: \n",
-    "- if we don't want to use transfer learning, we can also use raw classifications from the pre-trained model as a proxy metric to ok/defect\n",
-    "- You can look into explainability for computer vision algorithms\n",
+    "- Use raw classifications from the pre-trained model as a proxy metric to ok/defect\n",
+    "- Look into explainability for computer vision algorithms\n",
     "- Try large multimodal models\n"
    ]
   },
