feat: code upgraded to use latest keras/tf

--- a/00_defects_transfer_exercise.ipynb
+++ b/00_defects_transfer_exercise.ipynb
@@ -19,7 +19,16 @@
     "\n",
     "The code can be adapted from: \n",
     "- Keras tutorial https://keras.io/guides/transfer_learning/\n",
-    "- Kaggle tutorial https://www.kaggle.com/code/digantdixit/transfer-learning-cnn-for-beginners"
+    "- Kaggle tutorial https://www.kaggle.com/code/digantdixit/transfer-learning-cnn-for-beginners\n",
+    "\n",
+    "You can create a `conda` env to work in it, here is a minimal configuration (see also `environment.yml`):\n",
+    "```\n",
+    "conda create --name 241122_tp02_312 python=3.12\n",
+    "conda activate 241122_tp02_312\n",
+    "conda install -n 241122_tp02_312 ipykernel tensorflow pandas matplotlib\n",
+    "```\n",
+    "\n",
+    "If all else fails, you can work in [Google Colab](https://colab.research.google.com/notebooks/welcome.ipynb)."
    ]
   },
   {
@@ -46,7 +55,7 @@
    "outputs": [],
    "source": [
     "# Load your dataset from the directory `casting_512x512`\n",
-    "# by using keras.preprocessing.image.ImageDataGenerator\n",
+    "# by using keras.utils.image_dataset_from_directory()\n",
     "# check that you have 2 classes\n",
     "# think about rescaling and train/test splitting\n",
     "# plot a few pictures to see what you deal with"
@@ -138,10 +147,12 @@
     "- With or without data augmentation\n",
     "- With a different number of input pictures\n",
     "\n",
+    "Think about the execution time before starting your full loop!\n",
+    "\n",
     "Possible output:\n",
     "|Scenario|Type&puncsp;of&puncsp;model|Data&puncsp;augmentation|Number&puncsp;of&puncsp;training&puncsp;images|Number&puncsp;of&puncsp;test&puncsp;images|Training&puncsp;accuracy|Testing&puncsp;accuracy|Training&puncsp;duration|\n",
     "|-|-|-|-|-|-|-|-|\n",
-    "|1..n|Xception,&puncsp;MobileNet,&puncsp;ResNet,&puncsp;...|y/n|5%&puncsp;10%&puncsp;50%&puncsp;80%&puncsp;of&puncsp;total|||||\n",
+    "|1..n|Xception,&puncsp;MobileNet,&puncsp;ResNet,&puncsp;...|y/n|20%&puncsp;50%%&puncsp;of&puncsp;total|||||\n",
     "\n",
     "Other ideas: \n",
     "- Use raw classifications from the pre-trained model as a proxy metric to ok/defect\n",
