--- a/00_defects_transfer_exercise.ipynb
+++ b/00_defects_transfer_exercise.ipynb
@@ -5,7 +5,8 @@
    "id": "82f7f052",
    "metadata": {},
    "source": [
-    "This notebook is a tempate to work on an illustration of transfer learning. \n",
+    "This notebook is a template to work on an illustration of transfer learning. \n",
+    "\n",
     "It should use:\n",
     "- a pre-trained Model from Keras (Xception at first)\n",
     "- a dataset of images of casting products (impellers for submersible pumps), \n",
@@ -21,7 +22,8 @@
     "- Keras tutorial https://keras.io/guides/transfer_learning/\n",
     "- Kaggle tutorial https://www.kaggle.com/code/digantdixit/transfer-learning-cnn-for-beginners\n",
     "\n",
-    "You can create a `conda` env to work in it, here is a minimal configuration (see also `environment.yml`):\n",
+    "You can use python 12 and create a `conda` env to work in it, here is a minimal \n",
+    "configuration (see also `environment.yml`):\n",
     "```\n",
     "conda create --name 241122_tp02_312 python=3.12\n",
     "conda activate 241122_tp02_312\n",
