--- a/working_example/01_defects_transfer_working_example.ipynb
+++ b/working_example/01_defects_transfer_working_example.ipynb
@@ -14,7 +14,7 @@
     "- Keras tutorial https://keras.io/guides/transfer_learning/\n",
     "- Kaggle tutorial https://www.kaggle.com/code/digantdixit/transfer-learning-cnn-for-beginners\n",
     "\n",
-    "Works in a `conda` env described in `environment.yml`:"
+    "Works with python 12, in a `conda` env described in `environment.yml`:"
    ]
   },
   {
